@@ -32,7 +32,7 @@ def manage_addCMFBTreeFolder(dispatcher, id, title='', REQUEST=None):
     id = str(id)
     ob = CMFBTreeFolder(id)
     ob.title = str(title)
-    dispatcher._setObject(id, ob)
+    dispatcher._setObject(id, ob, suppress_events=True)
     ob = dispatcher._getOb(id)
     if REQUEST is not None:
         REQUEST['RESPONSE'].redirect(ob.absolute_url() + '/manage_main' )
@@ -58,7 +58,7 @@ class CMFBTreeFolder(BTreeFolder2Base, PortalFolderBase):
         """Add a new PortalFolder object with id *id*.
         """
         ob = PortalFolder(id, title)
-        self._setObject(id, ob)
+        self._setObject(id, ob, suppress_events=True)
         if REQUEST is not None:
             return self.folder_contents( # XXX: ick!
                 self, REQUEST, portal_status_message="Folder added")
